[gd_scene load_steps=4 format=2]

[ext_resource path="res://field/field.tscn" type="PackedScene" id=1]
[ext_resource path="res://board/board.gd" type="Script" id=2]
[ext_resource path="res://_fonts/goc.tres" type="DynamicFont" id=3]

[node name="board" type="Node2D"]
position = Vector2( 25, 0 )
script = ExtResource( 2 )

[node name="Line2D_r1" type="Line2D" parent="."]
position = Vector2( 162, 347 )
points = PoolVector2Array( 0, 0, 525, 0 )
default_color = Color( 1, 1, 1, 1 )

[node name="Line2D_c1" type="Line2D" parent="."]
position = Vector2( 337.559, 197 )
rotation = 1.5708
points = PoolVector2Array( 0, 0, 475, 0 )
default_color = Color( 1, 1, 1, 1 )

[node name="Line2D_r2" type="Line2D" parent="."]
position = Vector2( 162, 523 )
points = PoolVector2Array( 0, 0, 525, 0 )
default_color = Color( 1, 1, 1, 1 )

[node name="Line2D_c2" type="Line2D" parent="."]
position = Vector2( 512, 197 )
rotation = 1.5708
points = PoolVector2Array( 0, 0, 475, 0 )
default_color = Color( 1, 1, 1, 1 )

[node name="1" parent="." instance=ExtResource( 1 )]
margin_left = 164.0
margin_top = 198.0
margin_right = 331.0
margin_bottom = 341.0

[node name="2" parent="." instance=ExtResource( 1 )]
margin_left = 343.0
margin_top = 198.0
margin_right = 505.0
margin_bottom = 341.0

[node name="3" parent="." instance=ExtResource( 1 )]
margin_left = 517.979
margin_top = 198.0
margin_right = 684.979
margin_bottom = 341.0

[node name="4" parent="." instance=ExtResource( 1 )]
margin_left = 163.0
margin_top = 354.0
margin_right = 331.0
margin_bottom = 517.0

[node name="5" parent="." instance=ExtResource( 1 )]
margin_left = 343.0
margin_top = 354.0
margin_right = 506.0
margin_bottom = 517.0

[node name="6" parent="." instance=ExtResource( 1 )]
margin_left = 517.994
margin_top = 353.76
margin_right = 684.994
margin_bottom = 516.76

[node name="7" parent="." instance=ExtResource( 1 )]
margin_left = 165.0
margin_top = 528.0
margin_right = 332.0
margin_bottom = 671.0

[node name="8" parent="." instance=ExtResource( 1 )]
margin_left = 344.035
margin_top = 527.677
margin_right = 506.035
margin_bottom = 670.677

[node name="9" parent="." instance=ExtResource( 1 )]
margin_left = 518.2
margin_top = 529.283
margin_right = 685.2
margin_bottom = 672.283

[node name="x_name" type="Label" parent="."]
margin_left = -3.1527
margin_top = 720.924
margin_right = 316.847
margin_bottom = 774.924
custom_fonts/font = ExtResource( 3 )
text = "X"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="x_score" type="Label" parent="."]
margin_left = 89.0
margin_top = 797.0
margin_right = 223.0
margin_bottom = 851.0
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="o_name" type="Label" parent="."]
margin_left = 535.924
margin_top = 720.924
margin_right = 855.924
margin_bottom = 774.924
custom_fonts/font = ExtResource( 3 )
text = "O"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="o_score" type="Label" parent="."]
margin_left = 630.0
margin_top = 797.924
margin_right = 764.0
margin_bottom = 851.924
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tie" type="Label" parent="."]
margin_left = 378.924
margin_top = 720.924
margin_right = 472.924
margin_bottom = 774.924
custom_fonts/font = ExtResource( 3 )
text = "TIE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tie_num" type="Label" parent="."]
margin_left = 360.0
margin_top = 797.0
margin_right = 494.0
margin_bottom = 851.0
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
